<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    tools:context="com.example.projectoFinal.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="241dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/charMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:onClick="runPieChart"
                android:text="@string/charMonth"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toStartOf="@+id/charYear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/charYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/charYear"
                android:onClick="runBarChart"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/charMonth"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="50dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <!--                  chart grapic                      -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/LeftArrowID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="fill_vertical"
                android:onClick="LeftArrow"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/pieChart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pieChart"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="350dp"
                android:layout_height="210dp"
                android:id="@+id/noDataContainer"
                android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="163dp"
                    android:layout_height="102dp"
                    android:layout_marginStart="30dp"
                    android:src="@mipmap/ic_no_data"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/nodata" />

                <TextView
                    android:id="@+id/noDataID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Any Value"
                    android:textSize="16dp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/imageView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/no_data_found"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="350dp"
                android:layout_height="210dp"
                android:background="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/divider3"
                app:layout_constraintEnd_toStartOf="@+id/rigthArrowID"
                app:layout_constraintStart_toEndOf="@+id/LeftArrowID"
                app:layout_constraintTop_toBottomOf="parent">

            </com.github.mikephil.charting.charts.PieChart>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="350dp"
                android:layout_height="210dp"
                android:background="@color/white"
                android:topRightRadius="5dp"
                android:visibility="gone"
                android:onClick="runBarChart"
                app:layout_constraintBottom_toTopOf="@+id/divider3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <ImageView
                android:id="@+id/rigthArrowID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="fill_vertical"
                android:onClick="RigtArrow"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/pieChart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pieChart" />

        </LinearLayout>
<!-- ****************END CHARTS ******************   -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/titleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/titleID"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/totalIncomeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalIncomeD"
                app:layout_constraintBottom_toTopOf="@+id/totalExpenseID"
                app:layout_constraintEnd_toStartOf="@+id/AmountI" />

            <TextView
                android:id="@+id/totalExpenseID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalExpenseID"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/amountE" />

            <TextView
                android:id="@+id/amountE"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:gravity="right"
                android:hint="@string/Amount_E"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="?attr/editTextColor"
                android:textSize="9dp"
                android:paddingTop="1dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AmountI" />

            <TextView
                android:id="@+id/AmountI"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:gravity="right"
                android:paddingTop="6dp"
                android:hint="@string/Amount_I"
                android:textAppearance="?android:attr/textAppearanceMediumInverse"
                android:textColor="?attr/editTextColor"
                android:textSize="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dateSelectedID"
                android:layout_width="138dp"
                android:layout_height="33dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_rectangle"
                android:hint="@string/dateSelectedID"
                android:onClick="setDate"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="3dp"
                android:textColor="#FF626262"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircleRadius="10dp"
                app:layout_constraintStart_toStartOf="parent" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_add_2"
                android:onClick="setDate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/saveID"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:gravity="fill_vertical"
                android:src="@drawable/ic_check_yes"
                android:onClick="addMonth"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dateSelectedID"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cancelID"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:gravity="fill_vertical"
                android:onClick="clickNo"
                android:visibility="gone"
                android:src="@drawable/ic_check_no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveID"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerViewId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>