<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dateID"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/transactionID"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/typeID"
                        android:backgroundTint="#00FFFFFF"
                        android:backgroundTintMode="multiply"
                        android:editable="false"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="right"
                        android:inputType="numberDecimal|numberSigned"


                        android:text="@string/transaction"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/typeID"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/typeID"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_below="@+id/descID"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:gravity="fill_vertical"
                        android:text="@string/typeID"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="9sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/descID" />

                    <TextView
                        android:id="@+id/descID"
                        android:layout_width="72dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:gravity="fill_vertical"
                        android:paddingBottom="1dp"
                        android:text="@string/description"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/dateID"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/editID"
                    android:gravity="fill_vertical"
                    android:hint="@string/dateID"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/rigthArrowID"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlCompat" />
                <ImageView
                    android:id="@+id/rigthArrowID"
                    android:layout_width="20dp"
                    android:layout_height="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/deleteID"
                    android:gravity="fill_vertical"
                    android:src="@drawable/ic_left_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/RigthArrowID"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/RigthArrowID"
                    android:layout_width="20dp"
                    android:layout_height="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/deleteID"
                    android:gravity="fill_vertical"
                    android:visibility="gone"
                    android:src="@drawable/ic_right_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/saveID"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/editID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/saveID"
                    android:gravity="fill_vertical"
                    android:visibility="gone"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/deleteID"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/saveID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toStartOf="@+id/deleteID"
                    android:gravity="fill_vertical"
                    android:src="@drawable/ic_save"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editID"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/deleteID"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="fill_vertical"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>